--- a/index.html
+++ b/index.html
@@ -214,11 +214,54 @@
                            </div>
                        </div>
                    </div>
-                  
                 </div>
-
             </div>
+            <p class="see-more">see more <i class="fas fa-arrow-right"></i></p> 
+        </section>
+        <section class>
+            <h1 class="third-header"> About More Feature</h1>
+        <div class="container3">
+            <div class="overflow"> 
+                <p>1.Electronic Devices<br>
+                    2.Electronic Accessories<br>
+                    3.TV & Home Appliances<br>
+                    4.Health & Beauty<br>
+                    5.Babies & Toys<br>
+                    6.Groceries & Pets<br>
+                    7.Home & Lifestyle<br>
+                    8.Women's Fashion<br>
+                    9.Men's Fashion<br>
+                    10.Watches, Bags & Jewelery<br>
+                    11.Sports & Outdoor<br>
+                    12.Automotive & Motorbike<br>
+                    13.Download APP<br>
+                    14.watch<br>
+                    15.Table<br> 
+                    </p>
+           </div>
+           <div>
+               <h1>Top Categories & Brands</h1>
+               <p></p>
+                Buy Value, not Just Goods with Daraz Care
+                With charities spanning <br>across sectors of education, health care, environmental preservation, and shelters, <br>you can choose to make a big difference<br> with a few, simple clicks.
+                 </p>
+                 <a class="join" href="">Join Us</a>
+           </div>
+        </div>
         </section>
         </main>   
+        <footer>
+          <div class="margin">
+            <h1 class="font">Influencer products</h1> 
+            <p class="p-tag">Copyright &copy;2020 influencer products<br>
+             All rights reserved</p>
+          </div>
+           <div class="icon">
+            <i class="fab fa-instagram space"></i>
+            <i class="fas fa-globe space"></i>
+            <i class="fab fa-twitter space"></i>
+            <i class="fab fa-youtube space"></i>
+           </div>
+        </footer>
 </body>
 </html>
