--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
             <p class="see-more">see more <i class="fas fa-arrow-right"></i></p> 
         </section>
-        <section class>
+        <section>
             <h1 class="third-header"> About More Feature</h1>
         <div class="container3">
             <div class="overflow"> 
